--- a/public/Login/Register/index.html
+++ b/public/Login/Register/index.html
@@ -1,1 +1,24 @@
-hi
+<!DOCTYPE html>
+<html>
+<head>
+	<title> DnD Chat Game </title>
+	<script type="text/javascript" src="script.js"></script>
+	<link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+
+	<div class="center">
+		<h1>Registration</h1>
+
+		<form method="post" action="">
+			<label for="username"></label>
+			<input type="text" name="username" id="username" placeholder="Username" class="form-control" required> 			<br>
+			<label for="password"></label>
+			<input type="password" name="password" id="password" placeholder="New Password" class="form-control" required>		<br>
+			<label for="password"></label>
+			<input type="password" name="password" id="password" placeholder="Retype Password" class="form-control" required>		<br>
+			<button class="register" type="submit">Register</button>
+		</form>
+	</div>
+</body>
+</html>
