--- a/public/Login/index.html
+++ b/public/Login/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title> DnD Chat Game </title>
-	<script type="text/javascript" src="script.js"></script>
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<script type="text/javascript" src="./script.js"></script>
+	<link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 <body>
 
