--- a/public/Login/index.html
+++ b/public/Login/index.html
@@ -12,9 +12,9 @@
 
 		<form method="post" action="">
 			<label for="username"></label>
-			<input type="text" name="username" id="username" placeholder="Username" class="form-control" required> 			<br>
+			<input type="text" name="username" id="username" placeholder="Username" class="form-control" pattern="[A-Za-z0-9]{8,15}" required title="Must be between 8 and 15 Letters and Numbers"> 			<br>
 			<label for="password"></label>
-			<input type="password" name="password" id="password" placeholder="Password" class="form-control" required>		<br>
+			<input type="password" name="password" id="password" placeholder="Password" class="form-control" pattern=".{8,15}" required title="Must be between 8 and 15 characters">		<br>
 			<button class="login" type="submit">Login</button>
 		</form>
 			<button class="register" onclick="register()">Register</button>
